--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
 - link:
     ~/.bashrc: bashrc
     ~/.vimrc: vimrc
+    ~/.config/nvim/init.vim: nvim
     ~/.config/kitty/kitty.conf: kitty.conf
 
 - shell:
