--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,3 +13,4 @@
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
+  - [chsh -s $(which zsh), Making zsh the default shell]
