--- a/kitty.conf
+++ b/kitty.conf
@@ -1,11 +1,25 @@
-# Font
+# Maps
+ 
+map ctrl+t new_tab
+map ctrl+q close_tab
+map ctrl+tab next_tab
+map ctrl+shift+tab prev_tab
 
+map ctrl+plus change_font_size all +1.0
+map ctrl+minus change_font_size all -1.0
+map ctrl+0 change_font_size all 0
+
+# Font
+font_family Liga SFMono Nerd Font
 font_size 12
 
 # Cursor
+
 cursor			#d8dee9
+cursor_blink_interval -1
 
 # Colors
+
 foreground		#d8dee9
 background		#2e3440
 selection_foreground	#2e3440
