Fix treesitter and lualine (again)

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -14,23 +14,23 @@ tab_separator '  |  '
 remember_window_size no
 window_padding_width 10
 hide_window_decorations yes
-initial_window_width 2000
-initial_window_height 1200
+initial_window_width 2500
+initial_window_height 1500
 
 # Font
 
 font_family Liga SFMono Nerd Font
-font_size 12 
+font_size 13 
 adjust_line_height 120%
 
 # Maps
- 
+
 map ctrl+t new_tab_with_cwd
-map ctrl+q close_tab
+map ctrl+w close_tab
 map ctrl+tab next_tab
 map ctrl+shift+tab prev_tab
 map ctrl+[ previous_window
 map ctrl+] next_window
-map ctrl+plus change_font_size all +1.0
+map ctrl+equal change_font_size all +1.0
 map ctrl+minus change_font_size all -1.0
 map ctrl+0 change_font_size all 0
