Change line height to 150%

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,6 +2,8 @@ include nord.conf
 
 # Settings
 
+allow_remote_control yes
+
 cursor_blink_interval 0
 cursor_shape beam
 editor '/opt/homebrew/bin/nvim'
@@ -21,7 +23,7 @@ initial_window_height 1500
 
 font_family Liga SFMono Nerd Font
 font_size 13 
-adjust_line_height 120%
+adjust_line_height 150%
 
 # Maps
 
