--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,12 +1,6 @@
 - defaults:
     link:
-      force: true
-
-- clean:
-    ~/:
-      force: true
-    ~/.config:
-      recursive: true
+      relink: true
 
 - link:
     ~/.config/kitty: kitty
@@ -14,4 +8,4 @@
     ~/.zshrc: zshrc
 
 - shell:
-  - [git submodule update --init --recursive, Installing submodules]
+  - [git submodule update --init --recursive, Updating submodules]
