Set the theme with a current-theme file (kitty +kitten themes)

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,8 +1,4 @@
-include nord.conf
-
 # Settings
-
-allow_remote_control yes
 
 cursor_blink_interval 0
 cursor_shape beam
@@ -15,15 +11,14 @@ tab_separator '  |  '
 
 remember_window_size no
 window_padding_width 0
-hide_window_decorations yes
-initial_window_width 2500
-initial_window_height 1500
+hide_window_decorations no
 
 # Font
 
-font_family Liga SFMono Nerd Font
-font_size 13 
+font_family FiraCode Nerd Font Mono
+font_size 14
 adjust_line_height 150%
+disable_ligatures cursor
 
 # Maps
 
@@ -36,3 +31,9 @@ map ctrl+] next_window
 map ctrl+equal change_font_size all +1.0
 map ctrl+minus change_font_size all -1.0
 map ctrl+0 change_font_size all 0
+
+
+# BEGIN_KITTY_THEME
+# Rosé Pine Dawn
+include current-theme.conf
+# END_KITTY_THEME
