Add path for Zorin OS keyboard file to config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,6 +6,10 @@
     ~/.config/kitty: kitty
     ~/.config/nvim: nvim
     ~/.zshrc: zshrc
+    /usr/share/X11/xkb/symbols/pc: zorinos-kbd-layout
+
 
 - shell:
   - [git submodule update --init --recursive, Updating submodules]
+
+
