Separate install scripts for macOS and Linux

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -2,12 +2,13 @@
     link:
       relink: true
 
+- clean: ['~', '~/.oh-my-zsh/custom/', '~/.oh-my-zsh/custom/plugins/']
+
 - link:
+    ~/.dotfiles: ''
     ~/.config/kitty: kitty
     ~/.config/nvim: nvim
     ~/.zshrc: zshrc
-    /usr/share/X11/xkb/symbols/pc: zorinos-kbd-layout
-
 
 - shell:
   - [git submodule update --init --recursive, Updating submodules]
