Specify medium font weight

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -15,7 +15,7 @@ hide_window_decorations no
 
 # Font
 
-font_family FiraCode Nerd Font Mono
+font_family FiraCode Nerd Font Mono Medium
 font_size 14
 adjust_line_height 150%
 disable_ligatures cursor
