Edit kitty tab bar integration

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,6 +8,8 @@ enable_audio_bell no
 tab_bar_edge top
 tab_bar_style powerline
 tab_separator '  |  '
+shell_integration no-title
+tab_title_template "{index}: {title[title.rfind('/')+1:]}" 
 
 remember_window_size no
 window_padding_width 0
