Changes before reinstalling OS

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,7 +2,6 @@
 
 cursor_blink_interval 0
 cursor_shape beam
-editor '/opt/homebrew/bin/nvim'
 enable_audio_bell no
 
 tab_bar_edge top
@@ -17,7 +16,7 @@ hide_window_decorations no
 
 # Font
 
-font_family FiraCode Nerd Font Mono Medium
+font_family Fira Code Retina
 font_size 14
 adjust_line_height 150%
 disable_ligatures cursor
