--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -13,26 +13,21 @@ tab_title_template "{index}: {title[title.rfind('/')+1:]}"
 remember_window_size no
 window_padding_width 0
 hide_window_decorations no
+initial_window_width 1500
+initial_window_height 1000
 
-# Font
+# Keymaps
 
-font_family Fira Code Retina
-font_size 14
-adjust_line_height 150%
-disable_ligatures cursor
-
-# Maps
-
-map ctrl+t new_tab_with_cwd
-map ctrl+w close_tab
-map ctrl+tab next_tab
-map ctrl+shift+tab prev_tab
-map ctrl+[ previous_window
-map ctrl+] next_window
 map ctrl+equal change_font_size all +1.0
 map ctrl+minus change_font_size all -1.0
 map ctrl+0 change_font_size all 0
 
+# Font
+
+font_family FiraCode NF
+font_size 14
+adjust_line_height 150%
+disable_ligatures cursor
 
 # BEGIN_KITTY_THEME
 # Rosé Pine Dawn
