--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
 - link:
     ~/.dotfiles: ''
     ~/.gitconfig: git/gitconfig
+    ~/.commitlintrc: git/commitlintrc
     ~/.config/kitty: kitty
     ~/.config/kinto/kinto.py: kinto/kinto.py
     ~/.config/nvim: nvim
