--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,6 +6,7 @@
 
 - link:
     ~/.dotfiles: ''
+    ~/.ssh/config: ssh/config
     ~/.gitconfig: git/gitconfig
     ~/.commitlintrc: git/commitlintrc
     ~/.config/kitty: kitty
