chore: backup after chezmoi fiasco

--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,53 +1,44 @@
-## name: Rosé Pine Dawn
-## author: mvllow
+# vim:ft=kitty
+
+## name: Tokyo Night Storm
 ## license: MIT
-## upstream: https://github.com/rose-pine/kitty/blob/main/dist/rose-pine-dawn.conf
-## blurb: All natural pine, faux fur and a bit of soho vibes for the classy minimalist
+## author: Folke Lemaitre
+## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty_tokyonight_storm.conf
 
-foreground               #575279
-background               #faf4ed
-selection_foreground     #575279
-selection_background     #dfdad9
+background #24283b
+foreground #c0caf5
+selection_background #364A82
+selection_foreground #c0caf5
+url_color #73daca
+cursor #c0caf5
 
-cursor                   #cecacd
-cursor_text_color        #575279
+# Tabs
+active_tab_background #7aa2f7
+active_tab_foreground #1f2335
+inactive_tab_background #292e42
+inactive_tab_foreground #545c7e
+#tab_bar_background #1D202F
 
-url_color                #907aa9
+# normal
+color0 #1D202F
+color1 #f7768e
+color2 #9ece6a
+color3 #e0af68
+color4 #7aa2f7
+color5 #bb9af7
+color6 #7dcfff
+color7 #a9b1d6
 
-active_tab_foreground    #575279
-active_tab_background    #f2e9e1
-inactive_tab_foreground  #9893a5
-inactive_tab_background  #faf4ed
+# bright
+color8 #414868
+color9 #f7768e
+color10 #9ece6a
+color11 #e0af68
+color12 #7aa2f7
+color13 #bb9af7
+color14 #7dcfff
+color15 #c0caf5
 
-# black
-color0   #f2e9e1
-color8   #9893a5
-
-# red
-color1   #b4637a
-color9   #b4637a
-
-# green
-color2   #286983
-color10  #286983
-
-# yellow
-color3   #ea9d34
-color11  #ea9d34
-
-# blue
-color4   #56949f
-color12  #56949f
-
-# magenta
-color5   #907aa9
-color13  #907aa9
-
-# cyan
-color6   #d7827e
-color14  #d7827e
-
-# white
-color7   #575279
-color15  #575279
-
+# extended colors
+color16 #ff9e64
+color17 #db4b4b
