--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,7 +8,7 @@
     ~/.dotfiles: ''
     ~/.ssh/config: ssh/config
     ~/.gitconfig: git/gitconfig
-    ~/.commitlintrc: git/commitlintrc
+    ~/commitlint.config.js: git/commitlint.config.js
     ~/.config/kitty: kitty
     ~/.config/kinto/kinto.py: kinto/kinto.py
     ~/.config/nvim: nvim
