--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -21,6 +21,7 @@ initial_window_height 1000
 map ctrl+equal change_font_size all +1.0
 map ctrl+minus change_font_size all -1.0
 map ctrl+0 change_font_size all 0
+map ctrl+t new_tab_with_cwd
 
 # Font
 
@@ -30,6 +31,6 @@ adjust_line_height 125%
 disable_ligatures cursor
 
 # BEGIN_KITTY_THEME
-# Rosé Pine Dawn
+# Tokyo Night Storm
 include current-theme.conf
 # END_KITTY_THEME
