--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,44 +1,80 @@
 # vim:ft=kitty
 
-## name: Tokyo Night Storm
-## license: MIT
-## author: Folke Lemaitre
-## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty_tokyonight_storm.conf
+## name:     Catppuccin-Latte
+## author:   Pocco81 (https://github.com/Pocco81)
+## license:  MIT
+## upstream: https://github.com/catppuccin/kitty/blob/main/latte.conf
+## blurb:    Soothing pastel theme for the high-spirited!
 
-background #24283b
-foreground #c0caf5
-selection_background #364A82
-selection_foreground #c0caf5
-url_color #73daca
-cursor #c0caf5
 
-# Tabs
-active_tab_background #7aa2f7
-active_tab_foreground #1f2335
-inactive_tab_background #292e42
-inactive_tab_foreground #545c7e
-#tab_bar_background #1D202F
 
-# normal
-color0 #1D202F
-color1 #f7768e
-color2 #9ece6a
-color3 #e0af68
-color4 #7aa2f7
-color5 #bb9af7
-color6 #7dcfff
-color7 #a9b1d6
+# The basic colors
+foreground              #4C4F69
+background              #EFF1F5
+selection_foreground    #EFF1F5
+selection_background    #DC8A78
 
-# bright
-color8 #414868
-color9 #f7768e
-color10 #9ece6a
-color11 #e0af68
-color12 #7aa2f7
-color13 #bb9af7
-color14 #7dcfff
-color15 #c0caf5
+# Cursor colors
+cursor                  #DC8A78
+cursor_text_color       #EFF1F5
 
-# extended colors
-color16 #ff9e64
-color17 #db4b4b
+# URL underline color when hovering with mouse
+url_color               #DC8A78
+
+# Kitty window border colors
+active_border_color     #7287FD
+inactive_border_color   #9CA0B0
+bell_border_color       #DF8E1D
+
+# OS Window titlebar colors
+wayland_titlebar_color system
+macos_titlebar_color system
+
+# Tab bar colors
+active_tab_foreground   #EFF1F5
+active_tab_background   #8839EF
+inactive_tab_foreground #4C4F69
+inactive_tab_background #9CA0B0
+tab_bar_background      #BCC0CC
+
+# Colors for marks (marked text in the terminal)
+mark1_foreground #EFF1F5
+mark1_background #7287fD
+mark2_foreground #EFF1F5
+mark2_background #8839EF
+mark3_foreground #EFF1F5
+mark3_background #209FB5
+
+# The 16 terminal colors
+
+# black
+color0 #5C5F77
+color8 #6C6F85
+
+# red
+color1 #D20F39
+color9 #D20F39
+
+# green
+color2  #40A02B
+color10 #40A02B
+
+# yellow
+color3  #DF8E1D
+color11 #DF8E1D
+
+# blue
+color4  #1E66F5
+color12 #1E66F5
+
+# magenta
+color5  #EA76CB
+color13 #EA76CB
+
+# cyan
+color6  #179299
+color14 #179299
+
+# white
+color7  #ACB0BE
+color15 #BCC0CC
