--- a/kitty/kitty/kitty.conf
+++ b/kitty/kitty/kitty.conf
@@ -5,25 +5,23 @@ cursor_shape beam
 enable_audio_bell no
 
 tab_bar_edge top
-tab_bar_style powerline
+tab_bar_style separator
 tab_separator '  |  '
-shell_integration no-title
-tab_title_template "{index}: {title[title.rfind('/')+1:]}" 
+tab_title_template "{title[title.rfind('/')+1:]}" 
 
 remember_window_size no
-window_padding_width 0
-hide_window_decorations no
+hide_window_decorations yes
 initial_window_width 1500
 initial_window_height 1000
 
 # Font
 
 font_family FiraCode Nerd Font
-font_size 14
+font_size 13
 adjust_line_height 115%
 disable_ligatures cursor
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Latte
+# Everforest Dark Soft
 include current-theme.conf
 # END_KITTY_THEME
