kitty present working dir

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -13,7 +13,10 @@ remember_window_size no
 initial_window_width 1500
 initial_window_height 1000
 
-confirm_os_window_close 0
+map cmd+enter new_window_with_cwd
+
+map shift+cmd+h previous_tab
+map shift+cmd+l next_tab
 
 # Font
 
