kitty: font: iosevka

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -20,9 +20,8 @@ map shift+cmd+l next_tab
 
 # Font
 
-font_family Blex Mono Nerd Font
-font_size 12
-adjust_line_height 115%
+font_family Iosevka Nerd Font
+font_size 13
 disable_ligatures cursor
 
 # BEGIN_KITTY_THEME
