--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -14,17 +14,20 @@ initial_window_width 1500
 initial_window_height 1000
 
 map cmd+enter new_window_with_cwd
-
 map shift+cmd+h previous_tab
 map shift+cmd+l next_tab
-
-# Font
-
-font_family Iosevka Nerd Font
-font_size 14
-disable_ligatures cursor
 
 # BEGIN_KITTY_THEME
 # Catppuccin-Macchiato
 include current-theme.conf
 # END_KITTY_THEME
+
+font_size 14
+disable_ligatures cursor
+
+# BEGIN_KITTY_FONTS
+font_family      family='Iosevka Nerd Font Mono' postscript_name=IosevkaNFM
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
