feat: add direnv

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,6 +6,7 @@
 
 - link:
     ~/.dotfiles: ''
+    ~/.config/direnv: direnv
     ~/.config/ghostty: ghostty
     ~/.config/nvim: nvim
     ~/.config/starship.toml: starship.toml
