feat: update ghostty config

--- a/ghostty/config
+++ b/ghostty/config
@@ -1,10 +1,13 @@
 font-family = FiraCode Nerd Font Mono
 font-size = 10
 
-theme = catppuccin-mocha
+theme = rose-pine
 
+keybind = shift+enter=text:\n
 keybind = cmd+shift+l=next_tab
 keybind = cmd+shift+h=previous_tab
+keybind = opt+shift+,=move_tab:-1
+keybind = opt+shift+.=move_tab:+1
 keybind = cmd+enter=new_split:down
 keybind = opt+shift+j=resize_split:down,10
 keybind = opt+shift+k=resize_split:up,10
